package algoblocks.engine;

public interface PencilState {
    public Shape draw(Coordinates oldCoords, Coordinates newCoords);
}

