@startuml
class Game {

}

class Player {

}

class Action {

}

class Coordinates {

}

class Coordinate {

}

class Pencil {

}

interface PencilState {

}

class RaisedPencilState {

}

class LoweredPencilState {

}

class Whiteboard {

}

class Grid {

}

class Movement{
    
}

Game o--right Whiteboard

Game "1" o-- "1" Player
Coordinates "1" o-- "2" Coordinate
Player --right Action

Player "1" o--left "1" Pencil
Pencil "1" o-- "1" PencilState
PencilState <|.. RaisedPencilState
PencilState <|.. LoweredPencilState

Player *-- Movement
Movement o-- Position
Position o-- Grid
Player ..> Direction
Movement *-- Direction
Whiteboard o-- Grid
Coordinates "1" --o "1" Player
Grid o-- Coordinates
Position ..> Coordinates
Movement ..> Coordinates


@enduml